<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Admin</string>
    <string name="base_url_production">https://onouremtv.com/onouremweb/bnn/</string>
    <string name="base_url_development">https://onourem.net/onouremweb/bnn/</string>
    <string name="base_url_local">@string/base_url_production</string>
    <string name="label_continue">Continue</string>
    <string name="label_page1_title">An Emotional Network of your close ones</string>
    <string name="label_page1_desc" />
    <string name="label_page2_title">Questions that spark meaningful conversations</string>
    <string name="label_page2_desc" />
    <string name="label_page3_title">Answer daily and feel the warmth of your relations</string>
    <string name="label_page3_desc" />
    <string name="label_page4_title">Try with few friends to fall in love with Onourem</string>
    <string name="label_page5_title">Watch these intro videos.</string>
    <string name="label_page5_title2">Watch these intro videos to learn about Onourem</string>
    <string name="menu_search">Search</string>
    <string name="menu_message">Chat</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_dashboard">Mood &amp; Watchlist</string>
    <string name="menu_audio_games">Vocals</string>
    <string name="menu_home">Home</string>
    <string name="menu_privacy_groups">Privacy Groups</string>
    <string name="menu_oclubs_groups">My O-Clubs</string>
    <string name="menu_invite_friends">Invite Friends</string>
    <string name="menu_apply_ambassador">Apply Ambassador</string>
    <string name="menu_friends">Friends</string>
    <string name="label_friends">Friends</string>
    <string name="label_answers">Answers</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_report_problem">Report Problem</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_onourem_intro">Onourem Intro</string>
    <string name="menu_review_onourem">Review Onourem</string>
    <string name="menu_logout">Logout</string>
    <string name="open_drawer">Open drawer</string>
    <string name="label_log_in_with_facebook">Log In with Facebook</string>
    <string name="label_reset_password">Reset Password</string>
    <string name="label_sign_up_description">To see Sign Up option, launch Onourem app by clicking on the link you have received from a friend in an email or message.</string>
    <string name="label_log_in">Log In</string>
    <string name="label_dont_have_account">Don\'t have an account?</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="hint_password">Password</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_or">Or</string>
    <string name="label_email">Email</string>
    <string name="msg_forgot_password_description">Let us help you with your password.</string>
    <string name="label_back_to_log_in">Back to Log In</string>
    <string name="label_male">Male</string>
    <string name="label_trans">Trans</string>
    <string name="label_female">Female</string>
    <string name="label_re_password">Re-Password</string>
    <string name="label_terms_and_conditions">T&amp;C and Privacy Policy</string>
    <string name="label_by_signing_up_you_agree_to">By signing up, you agree to</string>
    <string name="label_already_have_an_account">Already have an account?</string>
    <string name="label_gender">Gender</string>
    <string name="label_profession">Profession</string>
    <string name="label_last_name">Last name</string>
    <string name="label_first_name">First name</string>
    <string name="label_submit">Submit</string>
    <string name="label_question">Question</string>
    <string name="label_show_all_surveys">Show All Surveys</string>
    <string name="label_over_all">Overall</string>
    <string name="label_age">Age</string>
    <string name="facebook_app_id">288434841545498</string>
    <string name="fb_login_protocol_scheme">fb288434841545498</string>
    <string name="facebook_client_token">f79944cf6730de48c891e8729a4aee0d</string>
    <string name="label_question_games">Question Games</string>
    <string name="label_question_games_left">Solo</string>
    <string name="label_question_games_right">O-Clubs</string>
    <string name="label_question_games_title">Question Games</string>
    <string name="label_anonymous_surveys">Surveys</string>
    <string name="label_appreciate">Appreciate</string>
    <string name="label_question_create">Create Q</string>
    <string name="label_create_question">Watch List</string>
    <string name="label_points">Points</string>
    <string name="menu_all_servey">Surveys</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_anonymous_survey">Survey</string>
    <string name="label_request_password">Request Password</string>
    <string name="label_login">Log In</string>
    <string name="label_unspecified">Unspecified</string>
    <string name="label_older_than_60_yrs">older than 60 yrs</string>
    <string name="label_40_60_yrs">40–60 yrs</string>
    <string name="label_25_40_yrs">25–40 yrs</string>
    <string name="label_17_25_yrs">17–25 yrs</string>
    <string name="label_less_than_17yrs">less than 17yrs</string>
    <string name="label_network_error">Alert</string>
    <string name="label_ok">OK</string>
    <string name="next">Next</string>
    <string-array name="gender">
        <item>@string/label_male</item>
        <item>@string/label_female</item>
        <item>@string/label_trans</item>
    </string-array>
    <string-array name="survey">
        <item>OpenSurvey</item>
        <item>AnonymousSurvey</item>
    </string-array>
    <string-array name="yesNo">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="activityType">
        <item>1toM</item>
        <item>Card</item>
        <item>Task</item>
        <item>Message</item>
        <item>Survey</item>
        <item>External</item>

        
    </string-array>
    <string-array name="profession">
        <item>Student</item>
        <item>Working Professional</item>
        <item>Homemaker</item>
    </string-array>
    <string-array name="occupation">
        <item>Student</item>
        <item>Professional</item>
        <item>Home Manager</item>
        <item>Business Owner</item>
        <item>Retired</item>
        <item>Other</item>

    </string-array>
    <string-array name="isYoutube">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="label_new_members">New\nMembers</string>
    <string name="label_new_questions">New\nQuestions</string>
    <string name="label_new_answers">New\nAnswers</string>
    <string name="label_solo_games">Solo Games</string>
    <string name="label_play_independently">Play Independently</string>
    <string name="label_my_question_history">My Question History</string>
    <string name="label_play_in_groups">Play in O-Clubs</string>
    <string name="label_all_questions_played">All Questions Played</string>
    <string name="label_questions_i_created">Questions I Created</string>
    <string name="label_admin">Admin</string>
    <string name="label_create_friends_and_family_group_and_play"><![CDATA[Create Friends or Family O-Club & Play]]></string>
    <string name="label_answer">Answer</string>
    <string name="group_members_can_post_questions">Members can post questions</string>
    <string name="message_admin_can_post_questions">Who can post questions on the group :</string>
    <string name="action_label_add_remove_members">Add/Remove Members</string>
    <string name="action_label_get_invite_link">Get O-Club Invite Link</string>
    <string name="action_label_see_members">See Members</string>
    <string name="action_label_exit_group">Exit O-Club</string>
    <string name="action_label_delete_privacy_group">Delete Group</string>
    <string name="label_group_name">O-Club Name</string>
    <string name="label_cancel">Cancel</string>
    <string name="action_label_un_friend">Un-Friend</string>
    <string name="action_label_make_group_admin">Make O-Club Admin</string>
    <string name="action_label_remove_from_play_group">Remove From O-Club</string>
    <string name="action_label_remove_from_group">Remove From Group</string>
    <string name="action_label_remove_as_play_group_admin">Remove As O-Club Admin</string>
    <string name="edit_watch_list">Edit \nWatchlist</string>
    <string name="add_to_watch_list">Add Friends To Watchlist</string>
    <string name="label_show_answers">Show Answers</string>
    <string name="label_send_now">Send Now</string>
    <string name="message_no_one_has_asked_any_question_in_this_group_so_far_ask_a_question_to_start_having_fun">No one has asked any question in this O-Club so far. Ask a question to start having fun.</string>
    <string name="find_more_friends">Find More Friends</string>
    <string name="isnt_on_ur_watchlist">isn\'t on your WatchList</string>
    <string name="action_label_remove_from_watch_list">Remove from WatchList</string>
    <string name="action_label_reject_from_watch_list">Reject WatchList Request</string>
    <string name="watch_list">Watch List</string>
    <string name="label_photo_library">Photo : Open Library</string>
    <string name="label_photo_camera">Photo : Open Camera</string>
    <string name="label_video_library">Video : Open Library</string>
    <string name="label_youtube_video">Youtube Video : Add Link</string>
    <string name="label_video_camera">Video : Open Camera</string>
    <string name="label_done">Done</string>
    <string name="label_select_privacy">Select Privacy</string>
    <string name="label_edit_privacy">Edit Privacy</string>
    <string name="label_send_to_a_friend">Send To A Friend</string>
    <string name="label_enter_name_to_find_a_friend">Enter name to find a friend</string>
    <string name="label_outside_onourem">Outside Onourem</string>
    <string name="label_on_onourem">On Onourem</string>
    <string name="hint_enter_friend_s_name">Enter Friend\'s Name</string>
    <string name="label_go_back">Continue</string>
    <string name="label_go_back_2">Go Back</string>
    <string name="create_your_own_ques">Create Your Own Question</string>
    <string name="title_appreciate_dialog">Your kind words or thoughtful reflection can brighten someone\'s day. Send appreciation messages or share introspective thoughts.</string>
    <string name="title_compose_message">Compose Message</string>
    <string name="label_ask_this_to_friends">Ask this to friends</string>
    <string name="click_action_ask_friends">Ask Friends</string>
    <string name="click_action_all_answers">All Answers</string>
    <string name="click_action_ask_question">Ask Question</string>
    <string name="click_action_answer">Answer</string>
    <string name="click_action_send_to_friends">Share</string>
    <string name="click_action_all_cards">All Cards</string>
    <string name="click_action_share">Share</string>
    <string name="click_action_show_more">Show More</string>
    <string name="label_resend_link">Resend Link</string>
    <string name="msg_we_have_sent_you_a_verification_email_at_the_email_address_you_have_used_for_this_account_please_click_on_the_verification_link_in_the_email_to_activate_your_account_n_nafter_verifying_your_account_hit_continue_button_below_to_get_started">We have sent you a verification email at the email address you have used for this account. Please click on the verification link in the email to activate your account. \n\nAfter verifying your account, hit CONTINUE button below to get started.</string>
    <string name="label_log_in_guest">Explore As Guest</string>
    <string name="menu_fc">Bond-003 Game</string>
    <string name="menu_subscription">Subscription</string>
</resources>