<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutLegendTray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_resopnded"
        android:padding="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appCompatTextView6"
            style="@style/AppTextView.SmallTextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/bg_male"
            android:drawableLeft="@drawable/bg_male"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/label_older_than_60_yrs"
            app:layout_constraintBottom_toTopOf="@+id/appCompatTextView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appCompatTextView7"
            style="@style/AppTextView.SmallTextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/bg_unspecified"
            android:drawableLeft="@drawable/bg_unspecified"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="4dp"

            android:text="@string/label_40_60_yrs"
            app:layout_constraintBottom_toTopOf="@+id/appCompatTextView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView6" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appCompatTextView8"
            style="@style/AppTextView.SmallTextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/bg_trans"
            android:drawableLeft="@drawable/bg_trans"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/label_25_40_yrs"
            app:layout_constraintBottom_toTopOf="@+id/appCompatTextView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView7" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appCompatTextView9"
            style="@style/AppTextView.SmallTextBody"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:drawableStart="@drawable/bg_female"
            android:drawableLeft="@drawable/bg_female"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/label_17_25_yrs"
            app:layout_constraintBottom_toTopOf="@+id/appCompatTextView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView8" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appCompatTextView10"
            style="@style/AppTextView.SmallTextBody"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/bg_lessthan_17"
            android:drawableLeft="@drawable/bg_lessthan_17"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:text="@string/label_less_than_17yrs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView9" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
